--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,3 +54,4 @@ jobs:
           branch: gh-pages  # The branch the action should deploy to
           folder: out       # The folder the action should deploy
           clean: true       # Automatically remove deleted files from the deployment
+          token: ${{ secrets.GH_PAGES_TOKEN }}
